# EPDC_for_desktop

./: .gitignore  memo.md  meson.build  setup.sh
src/: main.c
src/controller/: add_obj.c  change_prop.c  draw_canvas.c  label_bind.c  usb_emit.c
src/css/: header.css
src/include/controller/: add_obj.h  change_prop.h  draw_canvas.h  label_bind.h  usb_emit.h
src/include/model/: object_common.h  rect_object.h  text_object.h  top_common.h
src/include/ui/: USB_btn.h  canvas.h  header.h  main_content.h  obj_list.h  ope_prop.h  setup_style.h  tab_ui.h
src/model/: object_common.c  rect_object.c  text_object.c  top_common.c  usb_emit_test_data.c
src/ui/: USB_btn.c  canvas.c  header.c  main_content.c  obj_list.c  ope_prop.c  setup_style.c  tab_ui.c
